modify urls and files

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="styles.scss" />
+    <link type="text/css" rel="stylesheet" href="style.css">
     <script
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
@@ -71,7 +72,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/project.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -105,20 +106,16 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Our Products</h2>
+          <h2 class="section-title dark-blue-text">PRODUCTS</h2>
 
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">ML Seismic and Wells Data Generator</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Generate real geological and geophysical data for machine learning model training
                   </p>
                 </div>
                 <a
@@ -152,7 +149,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/petroeval_logs.jpg"
                     />
                   </div>
                 </a>
@@ -165,14 +162,11 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">ML Horizon Tracker</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Automate your seismic horizon interpretation using machine learning. Track faster 
+                    and more accurately.
                   </p>
                 </div>
                 <a
@@ -206,7 +200,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="https://d9-wret.s3.us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/thumbnails/image/Seafloor3D.gif"
                     />
                   </div>
                 </a>
@@ -219,14 +213,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">LabelSet Generator</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Label, Extract, Train. Create your custom geo-labelsets for training machine learning models. 
                   </p>
                 </div>
                 <a
@@ -278,13 +268,18 @@
       <div class="container">
         <h2 class="section-title">Contact Us</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">Partner with us</p>
+          <a 
+          rel="noreferrer"
+          target="_blank"
+          class="cta-btn cta-btn--resume"
+          href="https://mailchi.mp/5364d46b9639/ai-geo-solutions">
+          Join the waitlist</a>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:analyticsood@gmail.com"
+            >Partner with us</a
           >
         </div>
       </div>
@@ -301,10 +296,10 @@
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/company/ood-analytics/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/olawaleibrahim" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -313,9 +308,9 @@
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
+          © 2022 - Template developed by
+          <a rel="noreferrer" href="https://github.com/olawaleibrahim" target="_blank"
+            >Olawale Ibrahim</a
           >
         </p>
 
@@ -324,7 +319,7 @@
           <a
             rel="noreferrer"
             class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
+            href="https://github.com/olawaleibrahim/2020_FORCE_Lithology_Prediction/fork"
             data-icon="octicon-repo-forked"
             data-size="large"
             data-show-count="true"
@@ -334,7 +329,7 @@
           <a
             rel="noreferrer"
             class="github-button"
-            href="https://github.com/cobidev/simplefolio"
+            href="https://github.com/olawaleibrahim/2020_FORCE_Lithology_Prediction"
             data-icon="octicon-star"
             data-size="large"
             data-show-count="true"
